<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arek.lab4_part2.WildAnimalFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_animal"
        android:id="@+id/textView3"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_living_place"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rg_animal_type"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="Water"
            android:id="@+id/rb_water"
            android:layout_gravity="center_horizontal"
            android:checked="true" />

        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="Forest"
            android:id="@+id/rb_forest"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="Field"
            android:id="@+id/rb_field"
            android:layout_gravity="center_horizontal"
            android:checked="false" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_animal_type"
        android:weightSum="1"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_carnivor"
            android:id="@+id/rb_carnivor"
            android:layout_gravity="center_horizontal"
            android:checked="true" />

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_herbivore"
            android:id="@+id/rb_herbivore"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_omnivore"
            android:id="@+id/rb_omnivore"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Living place"
            android:id="@+id/textView4"
            android:gravity="center"
            android:layout_below="@+id/et_name"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_animal"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView10"
        android:gravity="center"
        android:text="@string/tv_agresive_rate"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/rg_living_place"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sb_agresive"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:progress="0"
        android:indeterminate="false"
        android:max="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView5"
        android:gravity="center"
        android:text="@string/choose_type_of_animal"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2.90"
        android:layout_below="@+id/et_animal"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/btn_save"
        android:layout_marginBottom="136dp"
        android:layout_below="@id/sb_agresive"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onClickBtnSave" />


</RelativeLayout>
    </ScrollView>

</RelativeLayout>
