<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetElementsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/tv_name"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Name"
        android:id="@+id/tv_name_value"
        android:layout_below="@+id/textView11"
        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pet"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/drink"
        android:id="@+id/textView12"
        android:layout_below="@+id/tv_name"
        android:layout_alignRight="@+id/tv_name"
        android:layout_alignEnd="@+id/tv_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="drink"
        android:id="@+id/tv_drink_value"
        android:layout_below="@+id/tv_name_value"
        android:layout_alignLeft="@+id/tv_name_value"
        android:layout_alignStart="@+id/tv_name_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/living_place"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_toLeftOf="@+id/textView11"
        android:layout_toStartOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="living"
        android:id="@+id/tv_living_value"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignLeft="@+id/tv_drink_value"
        android:layout_alignStart="@+id/tv_drink_value" />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
